# dmimgtess

./: Makefile  configure  configure.ac  dmimgtess.xml
src/: Makefile.am  Makefile.in  dmimgtess.c  dmimgtess.par  heap2.c  t_dmimgtess.c  vtpdetect.h  vtpdetect_aots.h  vtpdetect_aots_voronoi_defs.h  vtpdetect_aots_voronoi_edgelist.c  vtpdetect_aots_voronoi_geometry.c  vtpdetect_aots_voronoi_heap.c  vtpdetect_aots_voronoi_main.c  vtpdetect_aots_voronoi_memory.c  vtpdetect_aots_voronoi_output.c  vtpdetect_aots_voronoi_voronoi.c  vtpdetect_cleanup.c  vtpdetect_compare.c  vtpdetect_input.c  vtpdetect_interface.c  vtpdetect_voroni.c
test/: Makefile.am  Makefile.in  dmimgtess.t
wrapper/: Makefile.am  Makefile.in
